# ble-orchestrator

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION_INDEX.md  LOG_INTEGRATION_EXAMPLE.md  LOG_MANAGEMENT_GUIDE.md  LOG_REVIEW_SUMMARY.md  MANIFEST.in  PACKAGING.md  QUICK_FIXES.md  QUICK_START.md  README.md  REFACTORING_PROPOSAL.md  REVIEW_SUMMARY.md  SPECIFICATION.md  build_package.sh  install_venv.sh  pyproject.toml  requirements.txt  setup.py
ble_controller/: __init__.py  __main__.py  ble_controller.py  exceptions.py  service.py
ble_controller/services/: __init__.py  request_queue.py
ble_controller/types/: __init__.py  request_task.py
ble_orchestrator/: __init__.py  __main__.py  main.py
ble_orchestrator/client/: __init__.py  client.py  notification_client.py  request_client.py
ble_orchestrator/examples/: bleak_scan_sample.py  button_simple_scan_test.py  button_simple_test.py  notification_example.py  queue_config_example.py  queue_monitor_example.py  queue_status_example.py  read_command_example.py  sample.py  scan_command_example.py  send_command_example.py  sensor_data_example.py
ble_orchestrator/orchestrator/: __init__.py  config.py  handler.py  health_checker.py  ipc_server.py  log_utils.py  notification_manager.py  queue_manager.py  scanner.py  server.py  service.py  types.py  watchdog.py
ble_orchestrator/systemd/: ble-orchestrator.service
doc/: LOG_MANAGEMENT_GUIDE.md
examples/: README.md  integration_watchdog_example.py  test_watchdog_example.py  watchdog_circuit_breaker.py  watchdog_example.py
scripts/: cleanup_logs.sh
src/: __init__.py  ble_controller.py
src/examples/: README.md  cli_example.py  http_client_example.py  request-queue-example.ts  test_example.py
src/services/: RequestQueue.ts
src/types/: RequestTask.ts
systemd/: ble-orchestrator.logrotate
tests/: __init__.py  conftest.py  test_basic_connection.py  test_ble_scanner_stability.py  test_ble_scanner_stability_2.py  test_bleakclient_watchdog.py  test_concurrent_toggle.py  test_exclusive_control.py  test_handler.py  test_ipc_server.py  test_queue_manager.py  test_request.py  test_request_queue.py  test_scanner.py  test_send_command_hang_1h.py  test_service.py  test_service_improved.py  test_watchdog.py
