[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ble-orchestrator"
version = "0.1.0"
description = "BLE制御用の常駐サービス"
requires-python = ">=3.9"
dependencies = [
    "bleak==0.22.3",
    "dataclasses-json",
    "aiofiles",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = 3.9
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]
ignore = ["E501"]
target-version = "py39" 